--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,7 +242,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.JPG") center;
+  background: url("../img/portfolio/img-1.JPG") center;
   background-size: cover;
   position: relative;
 }
